<resources>
    <!--<string name="app_name">Schoters</string>-->

    <!-- general start -->
    <string name="btn_done">Done</string>
    <string name="btn_try_again">Try Again</string>
    <string name="error_message">Oops&#8230; Something went wrong!</string>
    <!-- general end -->

    <!-- choose category screen start -->
    <string name="choose_cat_title">Choose Category</string>
    <string name="choose_cat_header">Personalize your Schoters homepage</string>
    <string name="choose_cat_description">Pick 5 top scholarship categories that you are interested
        to help us deliver the most relevant information with your preferences</string>
    <string name="choose_cat_at_least_one">You should choose at least one category!</string>
    <!-- choose category screen end -->

    <!-- show category screen start -->
    <string name="show_cat_title">Your Personal Category</string>
    <string name="show_cat_published_at">Published at&#160;%1$s</string>
    <!-- show category screen end -->
</resources>
